# HelloCMake

./: CMakeLists.txt  CMakePresets.json  HelloCMake.cpp  HelloCMake.h  README.MD  vcpkg.json
